--- a/programación/LigaInfantil/.project
+++ b/programación/LigaInfantil/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LigaInfantil</name>
+	<name>github_LigaInfantil</name>
 	<comment></comment>
 	<projects>
 	</projects>
